--- a/app/src/mainapp/res/values/strings.xml
+++ b/app/src/mainapp/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name_mainapp">EarnBySMS Gateway</string>
-    <string name="app_name">EarnBySMS Gateway</string>
+    <string name="app_name_mainapp"> </string>
+    <string name="app_name"> </string>
     <string name="mainapp_description">SMS Gateway and Forwarding</string>
     <string name="mainapp_tagline">Real-time SMS message forwarding</string>
 </resources>
